--- a/assets/style.css
+++ b/assets/style.css
@@ -465,7 +465,7 @@ main {
     min-height: 30rem;
     flex-direction: row;
     flex-wrap: nowrap;
-    max-width: 60rem;
+    max-width: 70rem;
     gap: 1.6rem;
     padding: 1.2rem;
     align-items: center;
@@ -489,6 +489,7 @@ main {
 .plans__card {
     position: relative;
     width: 19rem;
+    min-width: 19rem;
     height: 24.7rem;
     border-radius: 0.8rem;
     padding: 3.2rem 1.2rem 2.4rem 1.2rem;
@@ -552,7 +553,7 @@ main {
 
 .plans__card--button {
     margin-block-start: 2rem;
-    width: 15.2rem;
+    width: 100%;
     height: 4.8rem;
     background-color: var(--off-White);
     color: var(--black);
