--- a/style.css
+++ b/style.css
@@ -12,20 +12,33 @@ body {
     box-sizing: border-box;
 }
 
-
+.div__container {
+    background-color: whitesmoke;
+    height: 60rem;
+    display: grid;
+    place-content: center;
+}
 
 .contenedor {
-    border: 5px solid palegoldenrod;
-    background-color: palegreen;
+
+    background-color: rgb(42, 59, 42);
     display: grid;
-    /* grid-auto-columns: 20rem; */
-    grid-template-rows: 20rem 20rem 20rem;
-    grid-auto-columns: 20rem ;
-    grid-auto-flow: column;
+    grid-template-columns: 20rem 20rem;
+    grid-auto-rows: 20rem ;
+    /* grid-auto-flow: column; */
     gap: 2rem ;
 }
 
 .item  {
-    border: 0.5rem solid rgb(251, 152, 152);
-    font-size: 4rem;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(152, 194, 90);
+    display: grid;
+    place-items: end;
+}
+
+.item__inside {
+    width: 33.3%;
+    height: 50%;
+    background-color: purple;
 }
