--- a/style.css
+++ b/style.css
@@ -14,31 +14,29 @@ body {
 
 .div__container {
     background-color: whitesmoke;
-    height: 60rem;
+    min-height: 60rem;
     display: grid;
+    grid-template-rows: 1fr 1fr;
     place-content: center;
+    grid-auto-flow: row;
+    gap: 20px;
 }
 
-.contenedor {
+.item   {
+    border: 0.5rem solid palegoldenrod;
+    font-size: 2rem;
+}
 
-    background-color: rgb(42, 59, 42);
+.contenedor--autofit {
+    border: 0.5rem solid paleturquoise;
+    background-color: rgb(109, 30, 57);
     display: grid;
-    grid-template-columns: 20rem 20rem;
-    grid-auto-rows: 20rem ;
-    /* grid-auto-flow: column; */
-    gap: 2rem ;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 }
 
-.item  {
-    width: 100%;
-    height: 100%;
-    background-color: rgb(152, 194, 90);
+.contenedor--autofill {
+    border: 0.5rem solid paleturquoise;
+    background-color: rgb(109, 30, 57);
     display: grid;
-    place-items: end;
-}
-
-.item__inside {
-    width: 33.3%;
-    height: 50%;
-    background-color: purple;
+    grid-template-columns:  repeat(auto-fill, minmax(8rem, 1fr));
 }
