--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,3 +22,17 @@ body {
     font-size: 1.6rem;
     font-family: 'Quicksand', sans-serif;
 }
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* Posicionamiento
+Box Model
+Tipografía
+Visuales
+Otros */
