--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,6 +5,13 @@
     --very-light-pink: #C7C7C7;
     --text-input-field: #F7F7F7;
     --hospital-green: #ACD9B2;
+    /* medidas */
+    --sm: 1.4rem;
+    --md: 1.6rem;
+    --lg: 1.8rem;
+    --lineh--sm: 1.8rem;
+    --lineh--md: 2rem;
+    --lineh--lg: 2.2rem;
 }
 
 *, *::after, *::before {
@@ -20,6 +27,7 @@ html {
 
 body {
     font-size: 1.6rem;
+    line-height: 2.2rem;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -36,3 +44,79 @@ Box Model
 Tipografía
 Visuales
 Otros */
+
+.wrapple {
+    width: 100%;
+    height: 100vh;
+    min-width: 32rem;
+    padding: 0 1.2rem;
+    display: grid;
+    place-items: center;
+}
+
+.form__container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 30rem;
+    text-align: center;
+    justify-items: center;
+}
+
+.form__logo {
+    width: 15rem;
+    margin-block-end: 4.8rem;
+    display: none;
+}
+
+.form__title {
+    color: var(--black);
+    font-size: var(--lg);
+    line-height: var(--lineh--lg);
+}
+
+.form__subtitle {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    line-height: var(--lineh--md);
+    font-weight: 300;
+    margin-block-end: 2rem;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.form__label {
+    margin-block-start: 1.8rem;
+    text-align: left;
+    font-size: var(--sm);
+    font-weight: bold;
+}
+
+.form__input {
+    margin-block-start: 0.4rem;
+    padding: 0.8rem 1.2rem;
+    height: 3.2rem;
+    background-color: var(--text-input-field);
+    border: none;
+    border-radius: 0.8rem;
+    font-size: var(--md);
+    line-height: var(--lineh--md);
+}
+
+.form__button {
+    margin-block-start: 3.2rem;
+    height: 5.2rem;
+    color: var(--white);
+    background-color: var(--hospital-green);
+    cursor: pointer;
+    font-weight:bold;
+}
+
+@media (max-width: 640px) {
+    .form__logo {
+        display: block;
+    }
+}
