--- a/assets/styles/loginstyle.css
+++ b/assets/styles/loginstyle.css
@@ -27,24 +27,33 @@
     margin-block-end: 2rem;
 }
 
-.form__img {
-    width: 13.2rem;
-    height: 13.2rem;
-    border-radius: 50%;
-    background-color: var(--text-input-field);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.form__img .img {
-    width: 60%;
-}
-
 .form {
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.form__label {
+    margin-block-start: 1.8rem;
+    text-align: left;
+    font-size: var(--sm);
+    font-weight: bold;
+}
+
+.form__input {
+    margin-block-start: 0.4rem;
+    padding: 0.8rem 1.2rem;
+    height: 3.2rem;
+    background-color: var(--text-input-field);
+    border: none;
+    border-radius: 0.8rem;
+    font-size: var(--md);
+    line-height: var(--lineh--md);
+}
+
+.button__secondary--login {
+    position: relative;
+    margin-block-start: 4.2rem;
 }
 
 .form__action {
@@ -57,8 +66,15 @@
     color: var(--hospital-green);
 }
 
+
 @media (max-width: 640px) {
     .form__logo {
         display: block;
+    }
+
+    .button__secondary--login  {
+        position: absolute;
+        bottom: 2rem;
+        width: inherit;
     }
 }
